portefaix-policies-0.7.0/kyverno/M0001-metadata-labels/policy-M0001.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-M0001
  annotations:
    policies.kyverno.io/title: Metadata must set recommanded Kubernetes labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Metadata
    policies.kyverno.io/description: >-
      Metadata must set recommanded Kubernetes labels
      See: https://kubernetes.io/docs/concepts/overview/working-with-objects/common-labels
spec:
  validationFailureAction: audit
  rules:
  - name: check-for-recommanded-kubernetes-labels
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Kubernetes recommanded labels is required."
      pattern:
        metadata:
          labels:
            app.kubernetes.io/name: "?*"
            app.kubernetes.io/instance: "?*"
            app.kubernetes.io/component: "?*"
            app.kubernetes.io/part-of: "?*"
            app.kubernetes.io/managed-by: "?*"
